app-ingress.yaml

# Frontend Ingress manifest - Used by frontend application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogger-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
    acme.cert-manager.io/http01-edit-in-place: "true"
    #cert-manager.io/issue-temporary-certificate": "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - remotehomelab.be
    secretName: ssl-cert-production

  rules:
  - host: remotehomelab.be
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blogger-webapp-service
            port:
              number: 80
